--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A Node API and React client that scrapes jobs from the University of Waterloo’s co-op job portal and presents personalized job postings based on the user’s unique skillset"
     />
-    <title>WaterlooWorks Pro</title>
+    <title>WaterlooWorks Skill Search</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
